@@ -1,11 +1,11 @@
 if config.respond_to?(:gems)
-  config.gem 'ruby-openid', :lib => 'openid', :version => '>=2.0.4'
+  config.gem 'pelle-ruby-openid', :lib => 'openid', :version => '>=2.1.8', :source => 'http://gems.github.com'
 else
   begin
     require 'openid'
   rescue LoadError
     begin
-      gem 'ruby-openid', '>=2.0.4'
+      gem 'pelle-ruby-openid', '>=2.1.8', :lib => 'openid'
     rescue Gem::LoadError
       puts "Install the ruby-openid gem to enable OpenID support"
     end
