@@ -1,6 +1,12 @@
 require 'uri'
 require 'openid/extensions/sreg'
 require 'openid/extensions/ax'
+begin
+  require 'openid/extensions/oauth'
+  OPENID_GEM_WITH_OAUTH_SUPPORT=true
+rescue LoadError
+  OPENID_GEM_WITH_OAUTH_SUPPORT=false
+end
 require 'openid/store/filesystem'
 
 require File.dirname(__FILE__) + '/open_id_authentication/association'
@@ -138,10 +144,13 @@ module OpenIdAuthentication
       
       options[:required] ||= []  # reduces validation later
       options[:optional] ||= []
-
+      
       open_id_request = open_id_consumer.begin(identity_url)
       add_simple_registration_fields(open_id_request, options)
       add_ax_fields(open_id_request, options)
+      
+      add_oauth_fields(open_id_request, options ) if OPENID_GEM_WITH_OAUTH_SUPPORT
+      
       redirect_to(open_id_redirect_url(open_id_request, return_to, method))
     rescue OpenIdAuthentication::InvalidOpenId => e
       yield Result[:invalid], identity_url, nil
@@ -164,6 +173,15 @@ module OpenIdAuthentication
         [ OpenID::SReg::Response, OpenID::AX::FetchResponse ].each do |data_response|
           if data_response.from_success_response( open_id_response )
             profile_data.merge! data_response.from_success_response( open_id_response ).data
+          end
+        end
+        
+        if OPENID_GEM_WITH_OAUTH_SUPPORT
+          # If applicable add OAuth request_token and scope
+          oauth_response = OpenID::OAuth::Response.from_success_response( open_id_response )
+          if oauth_response
+            profile_data[:request_token]=oauth_response.request_token
+            profile_data[:oauth_scope]=oauth_response.scope if oauth_response.scope
           end
         end
         
@@ -192,6 +210,13 @@ module OpenIdAuthentication
       sreg_request.request_fields(optional_fields, false) unless optional_fields.blank?
       sreg_request.policy_url = fields[:policy_url] if fields[:policy_url]
       open_id_request.add_extension(sreg_request)
+    end
+
+    def add_oauth_fields(open_id_request, options={})
+      return unless options[:oauth] && options[:oauth][:consumer]
+      oauth_request = OpenID::OAuth::Request.new options[:oauth][:consumer], options[:oauth][:scope]
+
+      open_id_request.add_extension(oauth_request)
     end
     
     def add_ax_fields( open_id_request, fields )
