@@ -1,0 +1,2 @@
+OpenID::Util.logger = Rails.logger
+ActionController::Base.send :include, OpenIdAuthentication
